# internet_inside

./: .gitignore  README.md  application.py  automation_script.sh  cpy_spidev.py  requirements.txt  virt_int.py  water_tank_control.py
archive/: nrf24l01_simple_test.py  pyg.py  water_tank_control.py
pyg/: application.py  control_webserver.py  controller.py  process.py  rf24.py  tun_interface.py  tun_interface_test.py
pyg_control_system/: Cargo.toml
pyg_control_system/src/: control_system.rs  controller.rs  lib.rs
pyg_control_system/src/control_system/: controller.rs  process.rs
